favicon 50da3926fbe5cadec732974ac4b28ea2666c84de

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>一个导航 | 自用导航</title>
     <meta name="description" content="自用导航">
-    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/lmm214/edui@gh-pages/images/favicon.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lmm214/edui@gh-pages/css/icomoon.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lmm214/edui@gh-pages/css/style-diy.css">
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/images/favicon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/css/icomoon.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/css/style-diy.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arimo:400,700,400italic" media="print" onload="this.media='all'">
   </head>
 
@@ -22,10 +22,10 @@
                     
                     <div class="logo">
                         <a href="https://dennischancs.github.io/nav" class="logo-expanded">
-                            <img src="https://i.loli.net/2021/09/05/irN54lmxjVJOfkd.png"  style="height:68px" alt="" />
+                            <img src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/images/avatar.png"  style="height:68px" alt="" />
                         </a>
                         <a href="https://dennischancs.github.io/nav" class="logo-collapsed">
-                            <img src="https://i.loli.net/2021/09/05/YJDyhCpwUdkWjRb.png" width="40" alt="" />
+                            <img src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/images/favicon.png" width="40" alt="" />
                         </a>
                     </div>
                     <div class="mobile-menu-toggle visible-xs">
@@ -4604,13 +4604,13 @@
     </script>
     
 
-<script src="https://cdn.jsdelivr.net/gh/lmm214/edui@gh-pages/js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/lmm214/edui@gh-pages/js/TweenMax.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/lmm214/edui@gh-pages/js/resizeable.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/lmm214/edui@gh-pages/js/xenon-toggle.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/lmm214/edui@gh-pages/js/xenon-custom.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/lmm214/edui@gh-pages/js/lozad.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/lmm214/edui@gh-pages/js/LetterAvatar.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/TweenMax.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/resizeable.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/xenon-toggle.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/xenon-custom.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/lozad.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/LetterAvatar.js"></script>
 
 </body>
 </html>
