fonts e6c684ac3dde4d1a65e38b696c865a51946da54c

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     
                     <li class="has-sub">
                         <a>
-                            <i class="icon-pencil"></i>
+                            <i class="icon-embed2"></i>
                             <span class="title">Coding</span>
                         </a>
                         <ul>
