--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>一个导航 | 自用导航</title>
     <meta name="description" content="自用导航">
-    <link rel="shortcut icon" href="https://images.weserv.nl/?url=https://raw.githubusercontent.com/dennischancs/nav/gh-pages/images/favicon.png">
-    <link rel="stylesheet" href="https://images.weserv.nl/?url=https://raw.githubusercontent.com/dennischancs/nav/gh-pages/css/icomoon.css">
-    <link rel="stylesheet" href="https://images.weserv.nl/?url=https://raw.githubusercontent.com/dennischancs/nav/gh-pages/css/style-diy.css">
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/images/favicon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/css/icomoon.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/css/style-diy.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arimo:400,700,400italic" media="print" onload="this.media='all'">
   </head>
 
@@ -4931,12 +4931,12 @@
 
 
 <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-<script src="https://images.weserv.nl/?url=https://raw.githubusercontent.com/dennischancs/nav/gh-pages/js/TweenMax.min.js"></script>
-<script src="https://images.weserv.nl/?url=https://raw.githubusercontent.com/dennischancs/nav/gh-pages/js/resizeable.js"></script>
-<script src="https://images.weserv.nl/?url=https://raw.githubusercontent.com/dennischancs/nav/gh-pages/js/xenon-toggle.js"></script>
-<script src="https://images.weserv.nl/?url=https://raw.githubusercontent.com/dennischancs/nav/gh-pages/js/xenon-custom.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/TweenMax.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/resizeable.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/xenon-toggle.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/xenon-custom.js"></script>
 <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/lozad.js/1.16.0/lozad.js"></script>
-<script src="https://images.weserv.nl/?url=https://raw.githubusercontent.com/dennischancs/nav/gh-pages/js/LetterAvatar.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/js/LetterAvatar.js"></script>
 
 
 </body>
