Update home.html d94ff342c740ba70846c76122090855b1e976e71

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>一个导航 | 自用导航</title>
     <meta name="description" content="自用导航">
-    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/images/favicon.png">
+    <link rel="shortcut icon" href="https://images.weserv.nl/?url=https://raw.githubusercontent.com/dennischancs/nav/gh-pages/images/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/css/icomoon.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/css/style-diy.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arimo:400,700,400italic" media="print" onload="this.media='all'">
